# kinode-zkp-aggregator

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  metadata.json
aggregator_program/: Cargo.toml
contracts/: .eth_providers  .gitignore  README.md  build.sh
contracts/src/: SP1AggregateVerifier.sol
contracts/src/fixtures/: groth16-offchain.json  groth16-onchain-abi.json  groth16-onchain.json
contracts/test/: SP1AggregateVerifier.sol
elf/: riscv32im-succinct-zkvm-elf
pkg/: manifest.json
shared_types/: Cargo.toml
shared_types/src/: lib.rs
test/: tests.toml
test/zkp-aggregator-test/: Cargo.toml  metadata.json
test/zkp-aggregator-test/api/: zkp_aggregator_test:punctumfix.os-v0.wit
test/zkp-aggregator-test/pkg/: manifest.json
test/zkp-aggregator-test/zkp-aggregator-test/: Cargo.toml
test/zkp-aggregator-test/zkp-aggregator-test/src/: lib.rs
zkp-aggregator/: Cargo.toml
zkp-aggregator-ext/: Cargo.toml  build.rs
zkp-aggregator-ext/dummy-proofs/: verifying-key-0.json
zkp-aggregator-ext/src/: main.rs
zkp-aggregator/abi/: SP1AggregateVerifier.json
zkp-aggregator/src/: caller.rs  contract_caller.rs  lib.rs  structs.rs
