[package]
name = "zkp-aggregator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
kinode_process_lib = { version = "0.9.6", features = ["logging"] }
process_macros = { git = "https://github.com/kinode-dao/process_macros", rev = "626e501" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"
sp1-sdk = { version = "3.2.1", default-features = false}

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"

[build-dependencies]
sp1-build = "3.2.1"